k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: autoinvoice
  labels:
    name: autoinvoice
    environment: production
